fix bad align

--- a/app/assets/stylesheets/editor-3/modals.css.scss
+++ b/app/assets/stylesheets/editor-3/modals.css.scss
@@ -72,6 +72,7 @@
 }
 
 .ModalBlockList-item--full {
+  @include align-items(inherit);
   width: 100%;
   min-width: 100%;
   margin: 16px 0 0;
